kubernetes/blueberry-proxy/proxies.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blueberry-proxy
  labels:
    app: blueberry-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueberry-proxy
  template:
    metadata:
      labels:
        app: blueberry-proxy
    spec:
      nodeSelector:
        kubernetes.io/hostname: blueberry
      tolerations:
      - key: "proxy-only"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: homeassistant
        image: nixery.dev/shell/socat
        command: ["/bin/sh", "-c"]
        args:
          - |-
            exec socat TCP-LISTEN:8123,fork,reuseaddr TCP:127.0.0.1:8123
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  selector:
    app: blueberry-proxy
  ports:
    - protocol: TCP
      port: 8123
