kubernetes/blueberry-proxy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  selector:
    app: blueberry-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 15556
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: blueberry-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 14723
---
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  selector:
    app: blueberry-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 13100
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  selector:
    app: blueberry-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 16052
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: blueberry-proxy
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 15432
